tests/baselines/reference/jsDeclarationsParameterTagReusesInputNodeInEmit1.errors.txt
tests/cases/conformance/jsdoc/declarations/file.js(1,5): error TS4081: Exported type alias 'BaseFactory' has or is using private name 'Base'.
tests/cases/conformance/jsdoc/declarations/file.js(3,4): error TS4081: Exported type alias 'BaseFactoryFactory' has or is using private name 'Base'.
tests/cases/conformance/jsdoc/declarations/file.js(6,5): error TS4081: Exported type alias 'Base' has or is using private name '"tests/cases/conformance/jsdoc/declarations/base"'.


==== tests/cases/conformance/jsdoc/declarations/base.js (0 errors) ====
    class Base {
        constructor() {}
    }
    
    const BaseFactory = () => {
        return new Base();
    };
    
    BaseFactory.Base = Base;
    
    module.exports = BaseFactory;
    
==== tests/cases/conformance/jsdoc/declarations/file.js (3 errors) ====
    /** @typedef {import('./base')} BaseFactory */
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4081: Exported type alias 'BaseFactory' has or is using private name 'Base'.
    /**
     * @callback BaseFactoryFactory
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     * @param {import('./base')} factory
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     */
    ~
!!! error TS4081: Exported type alias 'BaseFactoryFactory' has or is using private name 'Base'.
    /** @enum {import('./base')} BaseFactoryFactoryRegistry */
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4081: Exported type alias 'Base' has or is using private name '"tests/cases/conformance/jsdoc/declarations/base"'.
    const couldntThinkOfAny = {}
    
    /**
     *
     * @param {InstanceType<BaseFactory["Base"]>} base
     * @returns {InstanceType<BaseFactory["Base"]>}
     */
    const test = (base) => {
        return base;
    };
    